--- a/src/Vts.SiteVisit/Vts.SiteVisit.csproj
+++ b/src/Vts.SiteVisit/Vts.SiteVisit.csproj
@@ -174,6 +174,7 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
+    <Compile Include="ViewModel\Application\Panels\FemSolverViewModel.cs" />
     <Compile Include="ViewModel\Application\Panels\MultiLayerTissueViewModel.cs" />
     <Compile Include="ViewModel\Application\Panels\LayerRegionViewModel.cs" />
     <Compile Include="ViewModel\Application\Panels\SimulationInputViewModel.cs" />
@@ -188,6 +189,9 @@
     <Compile Include="ViewModel\Helpers\PlotAxesLabels.cs" />
     <Compile Include="ViewModel\Application\Panels\SubPanels\SolutionDomainOptionViewModel.cs" />
     <Compile Include="ViewModel\Application\Panels\SpectralMappingViewModel.cs" />
+    <Compile Include="View\Application\Panels\FemSolverView.xaml.cs">
+      <DependentUpon>FemSolverView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\Application\Panels\IsolatedStorageView.xaml.cs">
       <DependentUpon>IsolatedStorageView.xaml</DependentUpon>
     </Compile>
@@ -294,6 +298,10 @@
     <Page Include="Resources\ControlResourceDictionary.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:MarkupCompilePass1</Generator>
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\Application\Panels\FemSolverView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
