Added SimulationInputValidation class to check sanity of input including source and tissue definitions.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -526,6 +526,9 @@
     <Compile Include="..\Vts\MonteCarlo\DataStructures\SimulationInputProvider.cs">
       <Link>MonteCarlo\DataStructures\SimulationInputProvider.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\DataStructures\SimulationInputValidation.cs">
+      <Link>MonteCarlo\DataStructures\SimulationInputValidation.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\DataStructures\SimulationOptions.cs">
       <Link>MonteCarlo\DataStructures\SimulationOptions.cs</Link>
     </Compile>
