--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -110,8 +110,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\Vts.Test\Common\ArrayExtensionsTests.cs">
-      <Link>Common\ArrayExtensionsTests.cs</Link>
+    <Compile Include="..\Vts.Test\Common\Extension Methods\ArrayExtensionsTests.cs">
+      <Link>Common\Extension Methods\ArrayExtensionsTests.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts.Test\Common\Extension Methods\RNGExtensionsTests.cs">
+      <Link>Common\Extension Methods\RNGExtensionsTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\Common\Helpers\Range\DoubleRangeTests.cs">
       <Link>Common\Helpers\Range\DoubleRangeTests.cs</Link>
