--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -206,6 +206,8 @@
     <Compile Include="Modeling\MetaNumericsZeroOrderBesselFunction.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Modeling\Spectroscopy\ChromophoreSpectrumTest.cs" />
+    <Compile Include="Modeling\Spectroscopy\SpectralDatabaseLoaderTest.cs" />
     <Compile Include="Modeling\ValidateInverseSolution.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -236,7 +238,6 @@
     <Compile Include="MonteCarlo\Detectors\CAWTwoLayerDetectorsTests.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MonteCarlo\Detectors\pMCDAWTwoLayerDetectorsTests.cs" />
     <Compile Include="MonteCarlo\Detectors\DAWDetectorsTests.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -246,15 +247,24 @@
     <Compile Include="MonteCarlo\Detectors\pMCDAWDetectorsTests.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="MonteCarlo\Detectors\pMCDAWTwoLayerDetectorsTests.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="MonteCarlo\IO\DetectorIOTests.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="MonteCarlo\MonteCarloFactoriesTests.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MonteCarlo\PhotonData\CollisionInfoDatabaseTests.cs" />
-    <Compile Include="MonteCarlo\PhotonData\pMCDatabaseTests.cs" />
-    <Compile Include="MonteCarlo\PhotonData\PhotonDatabaseTests.cs" />
+    <Compile Include="MonteCarlo\PhotonData\CollisionInfoDatabaseTests.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="MonteCarlo\PhotonData\PhotonDatabaseTests.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="MonteCarlo\PhotonData\pMCDatabaseTests.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="MonteCarlo\PostProcessing\PostProcessingTests.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -283,6 +293,7 @@
   <ItemGroup>
     <Folder Include="Modeling\Optimizers\" />
     <Folder Include="Modeling\Tools\" />
+    <Folder Include="MonteCarlo\TallyActions\pMCTallies\" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
