--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -167,6 +167,12 @@
     <Compile Include="..\Vts.Test\Modeling\MetaNumericsZeroOrderBesselFunction.cs">
       <Link>Modeling\MetaNumericsZeroOrderBesselFunction.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\Modeling\Spectroscopy\ChromophoreSpectrumTest.cs">
+      <Link>Modeling\Spectroscopy\ChromophoreSpectrumTest.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts.Test\Modeling\Spectroscopy\SpectralDatabaseLoaderTest.cs">
+      <Link>Modeling\Spectroscopy\SpectralDatabaseLoaderTest.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\Modeling\ValidateInverseSolution.cs">
       <Link>Modeling\ValidateInverseSolution.cs</Link>
     </Compile>
