--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -244,7 +244,9 @@
     <Compile Include="Modeling\Spectroscopy\Tissue.cs" />
     <Compile Include="Modeling\Tools\CalculatorToolbox.cs" />
     <Compile Include="Modeling\Tools\HankelTransform.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SimulationInputValidation.cs" />
+    <Compile Include="MonteCarlo\DataStructuresValidation\TissueInputs\MultiLayerTissueInputValidation.cs" />
+    <Compile Include="MonteCarlo\DataStructuresValidation\ValidationResult.cs" />
+    <Compile Include="MonteCarlo\DataStructuresValidation\SimulationInputValidation.cs" />
     <Compile Include="MonteCarlo\DataStructures\Output.cs" />
     <Compile Include="MonteCarlo\DataStructures\SimulationInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\SimulationInputExtensions.cs" />
