Modified SimulationOptions to seed with random time based seed if seed=-1. Added unit test to ensure random seed if different than fixed seed.

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -194,6 +194,9 @@
     <Compile Include="..\Vts.Test\MonteCarlo\DataStructures\SimulationInputTests.cs">
       <Link>MonteCarlo\DataStructures\SimulationInputTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\DataStructures\SimulationOptionsTests.cs">
+      <Link>MonteCarlo\DataStructures\SimulationOptionsTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Detectors\AnalogDetectorsTests.cs">
       <Link>MonteCarlo\Detectors\AnalogDetectorsTests.cs</Link>
     </Compile>
