--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -164,6 +164,8 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="MonteCarlo\Rng\MersenneTwisterSerializationInfo.cs" />
+    <Compile Include="MonteCarlo\Rng\SerializableMersenneTwister.cs" />
     <Compile Include="Factories\ComputationFactory.cs" />
     <Compile Include="Factories\Extensions\EnumExtensions.cs" />
     <Compile Include="Factories\SolverFactory.cs" />
